--- a/platforms/android/assets/www/core/views/player.client.view.html
+++ b/platforms/android/assets/www/core/views/player.client.view.html
@@ -11,7 +11,7 @@
             <div class='prbar' style='width:{{ player.prBarWidth }}%'></div>
             <div class='prbar-ghost'></div>
             <p class='time-zero'>{{ player.timePlayed | time }}</p>
-            <p class='time-remaining'>{{ player.duration | time }}</p> 
+            <p class='time-remaining'>:30</p>
         </div>   
 
         <div class='review-button-cont'>
