--- a/platforms/android/assets/www/core/views/reviewapology.client.view.html
+++ b/platforms/android/assets/www/core/views/reviewapology.client.view.html
@@ -9,7 +9,7 @@
 			<div class='prbar' style='width:{{ prBarWidth }}%'></div>
 			<div class='prbar-ghost'></div>
 			<p class='time-zero'>{{ timePlayed | time }}</p>
-			<p class='time-remaining'>{{ duration | time }}</p>	
+			<p class='time-remaining'>:30</p>
 			<!--<p class='time-remaining' ng-show='!stopPlay'>:30</p>-->	
 		</div>
 
@@ -18,7 +18,7 @@
 			Your browser does not support the audio element.
 		</audio> -->		
 
-		<div class='review-button-cont'>
+		<div class='review-button-cont' style="margin-top:4%;margin-bottom:4%">
 			<div ng-show='apologyStarted&&!apologyPaused' ng-click='stopMedia()' class='pause-button'>
 				<img src="./core/img/pause.png" alt="">
 			</div>
