--- a/platforms/ios/www/users/views/signup.client.view.html
+++ b/platforms/ios/www/users/views/signup.client.view.html
@@ -7,7 +7,7 @@
     			<img src="./core/img/logo.gif"></img>
     		</div>
     		<div class='login-input register-input login-main-width'>
-    			<input type='text' placeholder='phone number' name='phone' ng-model='phoneNumber' onfocus="this.placeholder = ''" onblur="this.placeholder = 'phone number'" required></input>
+    			<input type='text' placeholder='phone number' name='phone' ng-model='phoneNumber' onfocus="this.placeholder = ''" onblur="this.placeholder = 'phone number'" style="-webkit-border-radius: 0px;" required></input>
                 <div ng-show="signupForm.phone.$dirty && signupForm.phone.$invalid">Invalid:
                   <span ng-show="signupForm.phone.$error.required">Tell us your phone number.</span>
                 </div>
