--- a/www/core/views/player.client.view.html
+++ b/www/core/views/player.client.view.html
@@ -1,8 +1,7 @@
 <section>
     <div class='main-window' style="padding-top: 40px;">
-        
-        <div class='goback-to-record' style="margin-right: 30px;" ng-click="player.goTo('apoloinbox')"><</div>
-            
+
+        <div class="goback-to-record" ng-click="player.goTo('apoloinbox')"><span class="arrow">&lt;</span></div>
         <div style="padding-bottom: 35px;padding-top: 10px;text-align: center;">
             <img src="./core/img/Apology.gif" width="250px" />
         </div>
@@ -11,7 +10,7 @@
             <div class='prbar' style='width:{{ player.prBarWidth }}%'></div>
             <div class='prbar-ghost'></div>
             <p class='time-zero'>{{ player.timePlayed | time }}</p>
-            <p class='time-remaining'>{{ player.duration | time }}</p> 
+            <p class='time-remaining'>:30</p>
         </div>   
 
         <div class='review-button-cont'>
