--- a/platforms/ios/www/core/views/apoloinbox.client.view.html
+++ b/platforms/ios/www/core/views/apoloinbox.client.view.html
@@ -1,15 +1,15 @@
 <section data-ng-controller="InboxApolCtrl">
     <div class='main-window' style="padding-top: 40px;">
         <div class='goback-to-record' ng-click="goTo('/')"><span class="arrow"><</span></div>
-        <div><center><h4 class="g-font b page-title">RECEIVED MESSAGES</h4></center></div>
-        <div class="row" style="padding-top: 30px;margin-right: 0px;margin-left: 0px;padding-bottom: 20px;">
+        <div><center><h4 class="g-font b page-title" style="margin-top: 7px">RECEIVED MESSAGES</h4></center></div>
+        <div class="row" style="padding-top: 10px;margin-right: 0px;margin-left: 0px;padding-bottom: 20px;">
             <div style="padding: 0px;margin: 0px;padding-left: 30px;" class="col-xs-6 g-font b">
-                <div style="padding: 7px;padding-left:20px;border-color: white;border-width: 1px;border-style: solid;border-bottom-left-radius: 25px;border-top-left-radius: 25px;width: 100%;background-color: white;color: #5b5557;">
+                <div style="padding: 5px;padding-left:20px;border-color: white;border-width: 1px;border-style: solid;border-bottom-left-radius: 25px;border-top-left-radius: 25px;width: 100%;background-color: white;color: #5b5557;">
                     INBOX
                 </div>
             </div>
             <div style="padding: 0px;margin: 0px;padding-right: 30px;" class="col-xs-6 g-font b">
-                <div ng-click='goTo("/apolooutbox")' style="padding: 7px;padding-right:20px;border-color: white;border-width: 1px;border-style: solid;border-bottom-right-radius: 25px;border-top-right-radius: 25px;width: 100%;background-color: transparent;text-align: right;">
+                <div ng-click='goTo("/apolooutbox")' style="padding: 5px;padding-right:20px;border-color: white;border-width: 1px;border-style: solid;border-bottom-right-radius: 25px;border-top-right-radius: 25px;width: 100%;background-color: transparent;text-align: right;">
                     OUTBOX
                 </div>
             </div>
