--- a/www/core/views/aftersent.client.view.html
+++ b/www/core/views/aftersent.client.view.html
@@ -1,10 +1,13 @@
 <section data-ng-controller="AfterSentController">
 	 <div class='main-window'>
-		<p class='apology-header'>apology sent!</p>
-		<div ng-click="goTo('/radio')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 200px;margin-top: 30px; text-transform: uppercase;">tune into apology radio</div>
-		<div ng-click="goTo('/signin')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 200px;margin-top: 30px; text-transform: uppercase;">Record another apology</div>
-        <div ng-click="goTo('/')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 200px;margin-top: 30px; text-transform: uppercase;">home</div>
-		<div ng-click="share()" class='apology-footer'>
+		<p class='apology-header g-font b' style="font-size: 24px">apology sent!</p>
+		<div ng-click="goTo('/radio')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 5px;max-width: 200px;margin-top: 30px; text-transform: uppercase;font-family: GravurCondensed Bold;
+font-size: 16px;">tune into apology radio</div>
+		<div ng-click="goTo('/signin')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 5px;max-width: 200px;margin-top: 30px; text-transform: uppercase;font-family: GravurCondensed Bold;
+font-size: 16px;">Record new apology</div>
+        <div ng-click="goTo('/')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 5px;max-width: 200px;margin-top: 30px; text-transform: uppercase;font-family: GravurCondensed Bold;
+font-size: 16px;">home</div>
+		<div ng-click="share()" class='apology-footer g-font b'>
             SHARE APP
         </div>
      </div>
