--- a/platforms/ios/www/users/views/signup.client.view.html
+++ b/platforms/ios/www/users/views/signup.client.view.html
@@ -2,111 +2,29 @@
 
 
 	<div class="col-md-12 text-center">
-	    <form name="signupForm" novalidate>
-    		<div class='login-logo login-main-width'>
-    			<img src="./core/img/logo.gif"></img>
-    		</div>
-    		<div class='login-input register-input login-main-width'>
-    			<input type='text' placeholder='phone number' name='phone' ng-model='phoneNumber' onfocus="this.placeholder = ''" onblur="this.placeholder = 'phone number'" style="-webkit-border-radius: 0px;" required></input>
-                <div ng-show="signupForm.phone.$dirty && signupForm.phone.$invalid">Invalid:
-                  <span ng-show="signupForm.phone.$error.required">Tell us your phone number.</span>
-                </div>
-                <div>
-                    {{ error }}
-                </div>
-                <!--
-    			<input type='text' placeholder='Login' name='login' ng-model='credentials.username' onfocus="this.placeholder = ''" onblur="this.placeholder = 'Login'" required></input>
-    			<input type='email' placeholder='Email' name='email' ng-model='credentials.email' onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email'" required></input>
-    			<input type='password' placeholder='Password' name='password' ng-model='credentials.password' onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'" required></input>
-    			<input type='text' placeholder='First name' name='first_name' ng-model='credentials.firstName' onfocus="this.placeholder = ''" onblur="this.placeholder = 'First name'" required></input>
-    			<input type='text' placeholder='Last name' name='last_name' ng-model='credentials.lastName' onfocus="this.placeholder = ''" onblur="this.placeholder = 'Last name'" required></input>
-    		      -->
-    		</div>
-    		<!--<div class='login-remember login-main-width'>
-    			<img src="">
-    		</div>-->
-    		<div class='login-buttons login-main-width row'>
-    			<!--<a ng-click='goTo("/signin")' class="col-xs-6">
-    				<img src="./core/img/btn-signin.gif">
-    			</a>-->
-    			<a ng-click='signup()' class="col-xs-6">
-    				<img src="./core/img/btn-register.gif">
-    			</a>
-    		</div>
+		<form name="signupForm" novalidate>
+			<div class='login-logo login-main-width'>
+				<img src="./core/img/logo.gif"></img>
+			</div>
+			<p class='apology-title'>Signup</p>
+			<div class='login-input register-input login-main-width'>
+				<input type='text' placeholder='username' name='username' ng-model='username' onfocus="this.placeholder = ''" onblur="this.placeholder = 'username'" required></input>
+				<input type='password' placeholder='password' name='password' ng-model='password' onfocus="this.placeholder = ''" onblur="this.placeholder = 'password'" required></input>
+				<div>
+					{{ error }}
+				</div>
+
+			</div>
+			<div class='login-buttons login-main-width row'>
+				<a ng-click='goTo("/signin")' class="col-xs-6">
+					<img src="./core/img/btn-signin.gif">
+				</a>
+				<a ng-click='signup()' class="col-xs-6">
+					<img src="./core/img/btn-register.gif">
+				</a>
+			</div>
 		</form>
 	</div>
 
 
 </section>
-
-
-
-<!-- <section class="row" data-ng-controller="AuthenticationController">
-	<h3 class="col-md-12 text-center">Register using your social accounts</h3>
-	<div class="col-md-12 text-center">
-		<a href="/auth/facebook" class="undecorated-link">
-			<img src="/modules/users/img/buttons/facebook.png">
-		</a>
-		<a href="/auth/twitter" class="undecorated-link">
-			<img src="/modules/users/img/buttons/twitter.png">
-		</a>
-		<a href="/auth/google" class="undecorated-link">
-			<img src="/modules/users/img/buttons/google.png">
-		</a>
-	</div>
-	<h3 class="col-md-12 text-center">Or with your email</h3>
-	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
-		<form data-ng-submit="signup()"  name="signUnForm" role="form" class="form-horizontal"  autocomplete="off">
-			<div class="form-group">
-				<div class="input-group">
-					<span class="input-group-addon">
-						<span class="fa fa-user"></span>
-					</span>
-					<input class="form-control" type="text" name="username" data-ng-model="credentials.username"  placeholder="Username"/>
-				</div>
-				<span ng-show="signUnForm.email.$invalid">Email</span>
-			</div>
-			<div class="form-group">
-				<div class="input-group">
-					<span class="input-group-addon">
-						<span class="fa fa-envelope"></span>
-					</span>
-					<input class="form-control" type="email" name="email" data-ng-model="credentials.email"  placeholder="Email"/>
-				</div>
-				<span ng-show="signUnForm.email.$invalid">Email</span>
-			</div>
-			<div class="form-group">
-				<div class="input-group">
-					<span class="input-group-addon">
-						<span class="fa fa-asterisk"></span>
-					</span>
-					<input class="form-control" type="password" name="password" data-ng-model="credentials.password"  placeholder="Password"/>
-				</div>
-				<span ng-show="signInForm.password.$invalid">Password</span>
-			</div>
-			<div class="form-group">
-				<div class="input-group">
-					<span class="input-group-addon">
-						<span class="fa fa-male"></span>
-					</span>
-					<input class="form-control" type="text" name="firstName" data-ng-model="credentials.firstName"  placeholder="First Name"/>
-				</div>
-				<span ng-show="signUnForm.email.$invalid">Email</span>
-			</div>
-			<div class="form-group">
-				<div class="input-group">
-					<span class="input-group-addon">
-						<span class="fa fa-male"></span>
-					</span>
-					<input class="form-control" type="text" name="lastName" data-ng-model="credentials.lastName"  placeholder="Last Name"/>
-				</div>
-			</div>
-			<div class="form-group">
-				<button type="submit" class="btn btn-default col-md-12">Register</button>
-			</div>
-			<div class="form-group">
-				<a ng-click='goTo("/signin")' class="btn btn-default col-md-12">Log In</a>
-			</div>
-		</form>
-	</div>
-</section> -->
