--- a/www/core/views/launch.client.view.html
+++ b/www/core/views/launch.client.view.html
@@ -4,12 +4,12 @@
         <div class='landing-begin' ng-click='letTheGameBegin()'><img src="./core/img/begin-button.png" style="width: 120px;" /></div>
     </div>
     <div class='main-window'>
-        <div style="padding: 30px;padding-top: 2%;">
+        <div style="padding: 30px;padding-top: 4%;">
             <div style="text-align: right;padding-top: 4%" class="inbox-container" ng-class="{'custom-hide': launch.notifications==null}" ng-click="launch.goTo('/apoloinbox')">
                 YOUR INBOX <img src="./core/img/inbox.png" class="inbox-img"/><div style="width: 18px;height: 18px;border-radius: 50%;background-color: #fe5252;text-align: center;display: inline;position: absolute;margin-left: -15px;margin-top: -10px; font-size: 14px;" ng-show="launch.notifications!=0">{{ launch.notifications }}</div>
             </div>
             
-            <div style="padding-bottom: 1%;padding-top: 1%;">
+            <div style="padding-bottom: 1%;padding-top: 4%;">
                 <img src="./core/img/Apology.gif" width="250px" />
             </div>
             
@@ -50,7 +50,7 @@
                 </div>
             </div>
             
-            <div ng-click="launch.goTo('/radio')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 250px;margin-top: 0px;" class="g-font tune-in">TUNE IN TO APOLOGY RADIO</div>
+            <div ng-click="launch.goTo('/radio')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 250px;margin-top: 10vw;" class="g-font tune-in">TUNE IN TO APOLOGY RADIO</div>
         </div>
         <div class='apology-footer g-font b' ng-click="launch.goTo('/signin')">
             RECORD AN APOLOGY
