--- a/www/users/views/signin.client.view.html
+++ b/www/users/views/signin.client.view.html
@@ -1,113 +1,27 @@
-<!--<section class="" data-ng-controller="AuthenticationController">
-
-
-	<div class="col-md-12 text-center">
-		<div class='login-logo login-main-width'>
-			<img src="./core/img/logo.gif"></img>
-		</div>
-		<div class='login-input login-main-width'>
-			<input type='text' placeholder='Login' ng-model='credentials.username' onfocus="this.placeholder = ''" onblur="this.placeholder = 'Login'" ></input>
-			<span ng-show="signInForm.username.$invalid">UserName</span>
-			<input type='password' placeholder='Password' ng-model='credentials.password' onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'" ></input>
-			<span ng-show="signInForm.password.$invalid">Password</span>
-		</div>
-		<div class='login-remember login-main-width'>
-			<img src="">
-		</div>
-		<div class='login-buttons login-main-width row'>
-			<a ng-click='goTo("/signup")' class="col-xs-6">
-				<img src="./core/img/btn-register.gif">
-			</a>
-			<a ng-click='signin()' class="col-xs-6">
-				<img src="./core/img/btn-signin.gif">
-			</a>
-		</div>
-		<div class='login-forgot login-main-width'>
-			<a ng-click='goTo("/forgot-password")'>Forgot you password?</a>
-		</div>
-	</div>
-
--->
-
-
-<!-- 	<h3 class="col-md-12 text-center">Log In using your social accounts</h3>
-	<div class="col-md-12 text-center">
-		<a href="/auth/facebook" class="undecorated-link">
-			<img src="/modules/users/img/buttons/facebook.png">
-		</a>
-		<a href="/auth/twitter" class="undecorated-link">
-			<img src="/modules/users/img/buttons/twitter.png">
-		</a>
-		<a href="/auth/google" class="undecorated-link">
-			<img src="/modules/users/img/buttons/google.png">
-		</a>
-	</div>
-	<h3 class="col-md-12 text-center">Or with your account</h3>
-	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
-		<form  data-ng-submit="signin()"  name="signInForm" role="form" class="form-horizontal"  autocomplete="off">
-			<div class="form-group">
-				<div class="input-group">
-					<span class="input-group-addon">
-						<span class="fa fa-user"></span>
-					</span>
-					<input class="form-control" type="text" name="username" data-ng-model="credentials.username"  placeholder="Username"/>
-				</div>
-				<span ng-show="signInForm.username.$invalid">UserName</span>
-			</div>
-			<div class="form-group">
-				<div class="input-group">
-					<span class="input-group-addon">
-						<span class="fa fa-asterisk"></span>
-					</span>
-					<input class="form-control" type="password" name="password" data-ng-model="credentials.password"  placeholder="Password"/>
-				</div>
-				<span ng-show="signInForm.password.$invalid">Password</span>
-			</div>
-			<div class="form-group">
-				<div class="checkbox col-md-offset-2">
-					<label>
-						<input type="checkbox">Remember me
-					</label>
-				</div>
-			</div>
-			<div class="form-group">
-				<button type="submit" class="btn btn-default col-md-12">Log In</button>
-			</div>
-			<div class="form-group">
-				<a href="/#!/signup" class="btn btn-default col-md-12">Register</a>
-			</div>
-			<strong data-ng-bind="error"></strong>
-			<div class="form-group">
-				<a href="/#!/forgot-password" class="btn btn-default col-md-12">Forgot Password</a>
-			</div>
-		</form>
-	</div> -->
-<!--</section>-->
-
 <section class="" data-ng-controller="AuthenticationController">
 
 
     <div class="col-md-12 text-center">
-        <div ng-show='loading'>
-            Try to Login...
-        </div>
-        <form name="signupForm" novalidate ng-hide='loading'>
+        <div style="text-align: center;" ng-show="loading">Pleas Wait...</div>
+        <form name="signupForm" novalidate ng-hide="loading">
             <div class='login-logo login-main-width'>
                 <img src="./core/img/logo.gif"></img>
             </div>
+            <p class='apology-title'>Login</p>
             <div class='login-input register-input login-main-width'>
-                <input type='text' placeholder='phone number' name='phone' ng-model='phoneNumber' onfocus="this.placeholder = ''" onblur="this.placeholder = 'phone number'" required></input>
-                <div ng-show="signupForm.phone.$dirty && signupForm.phone.$invalid">Invalid:
-                  <span ng-show="signupForm.phone.$error.required">Tell us your phone number.</span>
-                </div>
+                <input type='text' placeholder='username' name='username' ng-model='username' onfocus="this.placeholder = ''" onblur="this.placeholder = 'username'" required></input>
+				<input type='password' placeholder='password' name='password' ng-model='password' onfocus="this.placeholder = ''" onblur="this.placeholder = 'password'" required></input>
                 <div>
                     {{ error }}
                 </div>
 
             </div>
             <div class='login-buttons login-main-width row'>
-                <a ng-click='signup()' class="col-xs-6">
+                <a ng-click='goTo("/signup")' class="col-xs-6">
                     <img src="./core/img/btn-register.gif">
+                </a>
+                <a ng-click='signin()' class="col-xs-6">
+                    <img src="./core/img/btn-signin.gif">
                 </a>
             </div>
         </form>
